--- a/airbnbmonitor/Views/Shared/_Layout.cshtml
+++ b/airbnbmonitor/Views/Shared/_Layout.cshtml
@@ -14,31 +14,7 @@
     @RenderBody()
 
     @Scripts.Render("~/bundles/scripts")
-
-    <script src="@Url.Content("~/Scripts/common.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/actions.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/stores/baseStore.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/popup.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/container.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/component.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/overlay.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/textGridItem.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/textGrid.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/loadingAnimation.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/headerButton.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/header.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/widget.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/stores/dataStore.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/stores/flatsPopupDataStore.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/stores/oneFlatDetailsStore.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/charts/lineChart.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/charts/lineChart.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/charts/donutChart.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/chartsPanel.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/flatsPopup.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/oneFlatDetailsPopup.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/components/map.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/app.jsx")"></script>
+    @Scripts.Render("~/bundles/jsx")
 
 </body>
 </html>
